# rtspStreamGui

./: .gitignore  README.md  pyproject.toml  rtspStreamGui.py  test.py
rtspStreamGui/: rtspStreamGui.py  rtspWorker.py
