[build-system]
requires = ["setuptools >= 60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtspStreamGui"
version = "1.0"
requires-python = ">= 3.9"
dependencies = ["opencv-python",
                "numpy",
                "PyQt6"]
authors = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
maintainers = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
description = "A GUI for running a rtsp stream camera"
readme = {file = "README.MD", content-type = "text/markdown"}
keywords = ["rtsp", "gui", "gui"]
classifiers = [
"Development Status :: 4 - Beta",
"Programming Language :: Python"]

[project.scripts]
rtspStreamGui = "rtspStreamGui.rtspStreamGui:main"

[tool.setuptools]
packages = ["rtspStreamGui"]

[project.urls]
repository = "https://github.com/msujas/rtspStreamGui"
